Refactor HtmlVersion and handle subdomains